Testing to fix transparent rectangle styling on mobile v3.

--- a/styles/_landing.scss
+++ b/styles/_landing.scss
@@ -64,7 +64,7 @@
     right: 0;
     top: 0;
     z-index: 3;
-    display: block;
+    display: none;
 
     animation: slideIn 1s;
     -webkit-animation: slideIn 1s;
